[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["Nishant Usapkar <cool250@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.5"
anyio = "^3.7.1"
aiofiles = "^23.2.1"
aiohttp = "^3.8.6"
aiosignal = "^1.3.1"
annotated-types = "^0.6.0"
ansi2html = "^1.8.0"
appdirs = "^1.4.4"
astroid = "^3.0.1"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
beautifulsoup4 = "^4.12.2"
black = "^23.9.1"
brotli = "^1.1.0"
bs4 = "^0.0.1"
cachelib = "^0.10.2"
certifi = "^2023.7.22"
chardet = "^5.2.0"
charset-normalizer = "^3.3.0"
click = "^8.1.7"
cycler = "^0.12.1"
dash = "^2.14.0"
dash-auth = "^2.0.0"
dash-bootstrap-components = "^1.5.0"
dash-bootstrap-templates = "^1.1.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-pivottable = "^0.0.2"
dash-renderer = "^1.9.1"
dash-table = "^5.0.0"
dash-tabulator = "^0.4.2"
dataclasses-json = "^0.6.1"
dill = "^0.3.7"
duckduckgo-search = "^3.9.3"
flask-compress = "^1.14"
flask-seasurf = "^1.1.1"
frozendict = "^2.3.8"
frozenlist = "^1.4.0"
future = "^0.18.3"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
html5lib = "^1.1"
httpx = "^0.25.0"
hyperframe = "^6.0.1"
idna = "^3.4"
install = "^1.3.5"
isort = "^5.12.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
joblib = "^1.3.2"
jsonpatch = "^1.33"
jsonpointer = "^2.4"
kiwisolver = "^1.4.5"
langsmith = "^0.0.44"
langchain = "^0.0.315"
lxml = "^4.9.3"
markupsafe = "^2.1.3"
marshmallow = "^3.20.1"
mccabe = "^0.7.0"
multidict = "^6.0.4"
multitasking = "^0.0.11"
mypy-extensions = "^1.0.0"
nest-asyncio = "^1.5.8"
numpy = "^1.16"
openai = "^0.28.1"
packaging = "^23.2"
pandas = "^2.1.1"
pathspec = "^0.11.2"
peewee = "^3.17.0"
platformdirs = "^3.11.0"
plotly = "^5.17.0"
pydantic = "^2.4.2"
pydantic-core = "^2.10.1"
pylint = "^3.0.1"
pyparsing = "^3.1.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
redis = "^5.0.1"
regex = "^2023.10.3"
requests = "^2.31.0"
retrying = "^1.3.4"
scipy = "^1.11.3"
six = "^1.16.0"
sniffio = "^1.3.0"
socksio = "^1.0.0"
soupsieve = "^2.5"
sqlalchemy = "^2.0.22"
tenacity = "^8.2.3"
toml = "^0.10.2"
tomlkit = "^0.12.1"
tqdm = "^4.66.1"
typed-ast = "^1.5.5"
typing-inspect = "^0.9.0"
typing-extensions = "^4.8.0"
tzdata = "^2023.3"
ua-parser = "^0.18.0"
urllib3 = "^2.0.6"
webencodings = "^0.5.1"
yarl = "^1.9.2"
yfinance = "^0.2.31"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
