[tool.poetry]
name = "options-portfolio"
version = "2023.10.1"
description = "TD Options trading code"
authors = ["Nishant Usapkar <cool250@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.5"
appdirs = "^1.4.4"
attrs = "^23.1.0"
black = "^23.9.1"
brotli = "^1.1.0"
certifi = "^2023.7.22"
chardet = "^5.2.0"
click = "^8.1.7"
cycler = "^0.12.1"
dash = "^2.14.0"
dash-auth = "^2.0.0"
dash-bootstrap-components = "^1.5.0"
dash-bootstrap-templates = "^1.1.0"
dash-renderer = "^1.9.1"
dash-table = "^5.0.0"
dash-tabulator = "^0.4.2"
python-dotenv = "^1.0.0"
flask-caching = "^2.1.0"
flask-compress = "^1.14"
flask-seasurf = "^1.1.1"
future = "^0.18.3"
gunicorn = "^21.2.0"
idna = "^3.4"
install = "^1.3.5"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
joblib = "^1.3.2"
kiwisolver = "^1.4.5"
lxml = "^4.9.3"
markupsafe = "^2.1.3"
numpy = "^1.26.1"
pandas = "^2.1.1"
pathspec = "^0.11.2"
plotly = "^5.17.0"
pyparsing = "^3.1.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
pylint = "^3.0.1"
regex = "^2023.10.3"
requests = "^2.31.0"
retrying = "^1.3.4"
six = "^1.16.0"
toml = "^0.10.2"
typed-ast = "^1.5.5"
ua-parser = "^0.18.0"
urllib3 = "^2.0.6"
redis = "^5.0.1"
dash-pivottable = "^0.0.2"
scipy = "^1.11.3"
openai = "^0.28.1"
bs4 = "^0.0.1"
yfinance = "^0.2.31"
duckduckgo-search = "^3.9.3"
langchain = "^0.0.315"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
